feat: Add Portafolio section structure to index.html

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
                         <li><a href="#inicio">Inicio</a></li>
                         <li><a href="#perfil">Perfil</a></li>
                         <li><a href="#habilidades">Habilidades</a></li>
+                        <li><a href="#portafolio">Portafolio</a></li>
                         <li><a href="#eventos">Eventos</a></li>
                         <li><a href="#gastronomico">Gastronómico</a></li>
                         <li><a href="#hotelero">Hotelero</a></li>
@@ -422,6 +423,22 @@
             
             <div class="section-cta animate-on-scroll animate-scale">
                 <a href="#contacto" class="btn btn-large">¿Interesado en mis habilidades? ¡Hablemos!</a>
+            </div>
+        </div>
+    </section>
+    
+    <!-- Portafolio -->
+    <section id="portafolio" class="section" aria-labelledby="portafolio-title">
+        <div class="container">
+            <h2 id="portafolio-title" class="section-title animate-on-scroll">Portafolio Visual</h2>
+            <div class="eventos-intro animate-on-scroll animate-right">
+                <p>
+                    Aquí puedes encontrar una selección de mis trabajos visuales, desde fotografía artística hasta documentación de proyectos de campo.
+                </p>
+            </div>
+            <!-- Gallery content will go here -->
+            <div class="gallery-container" style="text-align: center; padding: 4rem 0; border: 2px dashed #ccc;">
+                <p style="color: #666; font-style: italic;">Próximamente: Galería de imágenes.</p>
             </div>
         </div>
     </section>
